Fix Bugzilla keyword autocomplete menu in dark mode https://bugs.webkit-dev.org/show_bug.cgi?id=267913
Reviewed by Tim Nguyen.

Uses CSS custom properties to apply the correct colors
based on light or dark mode.

* Websites/bugs.webkit.org/skins/custom/global.css:
(.yui-skin-sam .yui-ac-content):

Canonical link: https://commits.webkit.org/286741@main

--- a/Websites/bugs.webkit.org/skins/custom/global.css
+++ b/Websites/bugs.webkit.org/skins/custom/global.css
@@ -2350,6 +2350,11 @@ form[name=login] table tr {
    border: 0;
 }
 
+.yui-skin-sam .yui-ac-content {
+    background-color: var(--input-background-color);
+    border-color: var(--input-border-color);
+}
+
 @media only screen and (max-width: 800px) {
     #bugzilla-body .navigation {
         margin: 1rem 0 1rem;
